# python-monorepo-project

./: README.md
.github/: CODEOWNERS
.github/workflows/: api_deploy.yml  api_test.yml  rollback_migration.yml
python-api-project/: .bandit  .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  env.template  pyproject.toml  run.py  settings.toml
python-api-project/.deploy/: migrations.sh  rollback_migrations.sh
python-api-project/alembic/: env.py
python-api-project/alembic/versions/: 0cf99a4c688f_.py
python-api-project/app/: api.py
python-api-project/app/common/: log.py
python-api-project/app/database/: models.py
python-api-project/tests/: test_api.py
