[tool.poetry]
name = "python-api-project"
version = "0.1.0"
description = ""
authors = ["Eduardo Matos <eduardo-matos004@hotmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.2"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
