[tool.poetry]
name = "python-api-project"
version = "0.1.0"
description = ""
authors = ["Eduardo Matos <eduardo-matos004@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.2"
uvicorn = "^0.19.0"
requests = "^2.28.1"
dynaconf = "^3.1.11"
sentry-sdk = "^1.10.1"
starlette-exporter = "^0.14.0"
psycopg2-binary = "^2.9.5"
alembic = "^1.8.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
bandit = "^1.7.4"

[tool.pytest.ini_options]
testpaths = ["tests",]

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "app/common/log.py", "app/database/connection.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 145

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
